Added some links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Pranav Shridhar's Website</title>
+    </head>
+    <body>
+        <h1>Welcome to Pranav Shridhar's page!</h1>
+        <h2>This page is still in construction, but keep checking back for updates!</h2>
+        <h2>In the meantime, here are some links you can check out</h2>
+        <ul>
+            <li><a href="resume.pdf">My resume</a></li>
+            <li><a href="https://www.linkedin.com/in/pranav-shridhar/">My LinkedIn Profile</a></li>
+            <li><a href="https://github.com/pranavshridhar/">My GitHub Profile</a></li>
+            <li><a href="mailto:pranavshridhar0@gmail.com">Send me an email!</a></li>
+        </ul>
+    </body>
+
+</html>
